# manodae

./: Cargo.toml  README.md
src/: action.rs  conflict.rs  error.rs  first.rs  follow.rs  grammar.rs  interner.rs  item.rs  lib.rs  main.rs  parser.rs  production.rs  production_LR1.rs  render_table.rs  simplify_grammar.rs  state.rs  symbol.rs  terminal.rs  token.rs  token_kind.rs  traits.rs
src/codegen/: action.rs  grammar.rs  item.rs  mod.rs  parser.rs  production.rs  state.rs  symbol.rs
src/tests/: E1.rs  basic.rs  left_factor.rs  mod.rs  remove_unit_productions.rs  tokens.rs
