[package]
name = "manodae"
version = "0.1.0"
edition = "2021"
authors = ["Manikanta Reddy <manikantareddytamalampudi7@gmail.com>"]
repository = "https://github.com/MRTamalampudi/manodae"
description = "LALR Parser generator rust lib"

[dependencies]
indexmap = "2.11.0"
tabled = "0.20.0"
quote = "1.0.42"
proc-macro2 = "1.0"
logos = "0.16.0"
